# hexaGenMini

./: CHANGELOG.md  README.md  REUSE.toml  REUSE.toml.orig  package-lock.json  package.json
.github/: CODEOWNERS  CONTRIBUTING.md  SUPPORT.md  config.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md  support.md
.github/workflows/: auto-assign.yml  branch-name-check.yml  ci.yml  ci.yml.orig  ci_LOCAL_127081.yml  ci_REMOTE_127499.yml  commitlint.yml  commitlint.yml.orig  labeler.yml  main-pr-protect.yml  pr-title-check.yml  release-pr-protect.yml  release-pr-protect.yml.orig  release.yml  reuse-lint.yml  stale.yml
.husky/: commit-msg  pre-commit
docs/: ARCHITECTURE.md  BRANCH_STRATEGY.md  BRANDING.md  CODE_OF_CONDUCT.md  COMMIT_STRATEGY.md  COMMUNITY.md  CONFIGURATION.md  CONTACT.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  FAQ.md  GETTING_STARTED.md  LABELLING_STRATEGY.md  PROJECT_BOARD.md  PROJECT_STRUCTURE.md  PR_STRATEGY.md  SECURITY.md  STYLE_GUIDE.md  SUMMARY.md  SUPPORT.md
firmware/: Cargo.lock.orig  Cargo.toml  Cargo.toml.orig  Makefile  Makefile.orig  build.rs  memory.x  memory.x.orig
firmware/.cargo/: config.toml  config.toml.orig
firmware/crates/at/: Cargo.toml
firmware/crates/at/src/: lib.rs
firmware/crates/core/: Cargo.toml
firmware/crates/dds/: Cargo.toml
firmware/crates/fsm/: Cargo.toml
firmware/crates/main/: Cargo.toml
firmware/crates/main/src/: main.rs
firmware/crates/nvc/: Cargo.toml
firmware/crates/rgb/: Cargo.toml
firmware/crates/usb/: Cargo.toml
firmware/crates/usb/src/: lib.rs
firmware/src/: main.rs  main.rs.orig  main_multicore.rs
firmware/src/at/: at_task.rs  command.rs  commands.rs  dispatcher.rs  handler.rs  mod.rs  parser.rs
firmware/src/at/handlers/: freq_handler.rs  fwupdate_handler.rs  mod.rs  operation_handler.rs  reset_handler.rs  setrgb_handler.rs  version_handler.rs
firmware/src/b64/: mod.rs
firmware/src/channel/: channel_manager.rs  channel_type.rs  message_type.rs  mod.rs  module_type.rs
firmware/src/dds/: ad985x.rs  dds_task.rs  dds_type.rs  mod.rs
firmware/src/error/: mod.rs
firmware/src/hexa_config/: mod.rs
firmware/src/rgb/: led.rs  mod.rs  rgb_task.rs
firmware/src/sysex/: mod.rs
firmware/src/usb/: mod.rs  usb_midi.rs  usb_task.rs
hardware/hexaGenMini-v1/: #auto_saved_files#  CONNECTOR.kicad_sch  DDS.kicad_sch  LDO.kicad_sch  MCU.kicad_sch  SCH_Library.kicad_sym  _autosave-hexaGenMini-v1.kicad_sch  fp-info-cache  fp-lib-table  hexaGenMini-v1.kicad_pcb  hexaGenMini-v1.kicad_prl  hexaGenMini-v1.kicad_pro  hexaGenMini-v1.kicad_sch  hexaGenMini-v1.step  sym-lib-table  ~hexaGenMini-v1.kicad_sch.lck
hardware/hexaGenMini-v1/PCB_Library.pretty/: CP_EIA-3216-18_Kemet-A.kicad_mod  C_0402_1005Metric.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  Crystal_SMD_3225-4Pin_3.2x2.5mm.kicad_mod  D_SMF.kicad_mod  LED_WS2812B_PLCC4_5.0x5.0mm_P3.2mm.kicad_mod  L_0603_1608Metric.kicad_mod  Oscillator_SMD_EuroQuartz_XO53-4Pin_5.0x3.2mm.kicad_mod  PinHeader_1x03_P2.54mm_Vertical.kicad_mod  QFN-56-1EP_7x7mm_P0.4mm_EP3.2x3.2mm.kicad_mod  R_0603_1608Metric.kicad_mod  SMA_Samtec_SMA-J-P-H-ST-EM1_EdgeMount.kicad_mod  SOIC-8_5.3x5.3mm_P1.27mm.kicad_mod  SOT-223-3_TabPin2.kicad_mod  SSOP-28_5.3x10.2mm_P0.65mm.kicad_mod  SW_SPST_B3U-1000P.kicad_mod  USB_C_Receptacle_HRO_TYPE-C-31-M-12.kicad_mod  USON-10_2.5x1.0mm_P0.5mm.kicad_mod
hardware/hexaGenMini-v1/fabrication_output/bom/: hexaGenMini-v1.csv
hardware/hexaGenMini-v1/fabrication_output/gerber/: hexaGenMini-v1-B_Cu.gbr  hexaGenMini-v1-B_Mask.gbr  hexaGenMini-v1-B_Paste.gbr  hexaGenMini-v1-B_Silkscreen.gbr  hexaGenMini-v1-Edge_Cuts.gbr  hexaGenMini-v1-F_Cu.gbr  hexaGenMini-v1-F_Mask.gbr  hexaGenMini-v1-F_Paste.gbr  hexaGenMini-v1-F_Silkscreen.gbr  hexaGenMini-v1-NPTH.drl  hexaGenMini-v1-PTH.drl  hexaGenMini-v1-job.gbrjob
hardware/hexaGenMini-v1/fabrication_output/pnp/: hexaGenMini-v1-bottom.pos  hexaGenMini-v1-top-pos.csv  hexaGenMini-v1-top.pos
mechanic/: Bottom-Body.stl  Bottom.20260301-215146.FCBak  Bottom.FCStd  Bottom.FCStd1  PcbBoard-Body.dxf  PcbBoard.20260301-215146.FCBak  PcbBoard.FCStd  PcbBoard.FCStd1  Top-Body.stl  Top.20260302-060034.FCBak  Top.FCStd
