# SPDX-FileCopyrightText: 2025 hexaTune LLC 
# SPDX-License-Identifier: MIT

[package]
name = "hexagenmini"
description = "Main domain - orchestrates all other domains and hardware interaction"
version = "0.1.0"
authors = ["Husamettin ARABACI <info@hexatune.com>"]
edition = "2024"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/hTuneSys/hexaGenMini"
homepage = "https://hexatune.com"
keywords = ["rust", "firmware", "event-driven", "embedded", "hexaGenMini"]
categories = ["embedded", "development-tools", "hardware-support"]
rust-version = "1.86.0"

[[bin]]
name = "hexagenmini"
path = "src/main.rs"
test = false
bench = false

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.8.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-boot-rp = { version = "0.8", default-features = false }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

embedded-storage = { version = "0.3" }

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

panic-probe = { version = "1.0.0", features = ["print-defmt"] }
smart-leds = "0.4.0"
heapless = "0.9.1"

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22.1", default-features = false }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true
